[project]
name = "substation-energy-potential"
version = "0.1.0"
description = "Substation Energy Potential in Brandenburg"
authors = [
  {name = "Konstantin Greger", email = "kogreger@gmail.com"},
]
maintainers = [
  {name = "Konstantin Greger", email = "kogreger@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
